# anna

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cursor/rules/: conventions.mdc  location.mdc
.github/workflows/: check-dynamic.yml  check-static.yml
anna/: Cargo.toml
anna/src/: main.rs
anna/src/cmd/: agent.rs  session.rs
docs/dev/: README.md
winlock/: Cargo.toml
winlock/src/: lib.rs
winlock/tests/it/: main.rs
