[package]
name = "winlock"
version = "0.1.0"
edition = "2021"
authors = ["Jessica Black <me@jessica.black>"]
license = "MPL-2.0"
publish = false

[dependencies]
async-fs = "2.1.2"
async-tempfile = "0.7.0"
async-walkdir = "2.1.0"
bon = "3.3.2"
color-eyre = "0.6.3"
fslock = "0.2.1"
futures-lite = "2.6.0"
homedir = "0.3.4"
pollster = "0.4.0"
rustygit = "0.5.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tempfile = "3.17.1"
